# newlib

./: .arcconfig  .gitignore  config.sub
libgloss/: configure  configure.in
libgloss/k1-cos/: asm_syscalls.S  asm_syscalls_native.S  chdir.c  crt0.c  crti.c  crtn.c  dup.c  dup2.c  execve.c  exit.c  fork.c  fstat.c  getpagesize.c  gettimeofday.c  isatty.c  kill.c  link.c  mkfifo.c  nanosleep.c  open.c  read.c  sleep.c  times.c  unlink.c  usleep.c  write.c
libgloss/k1-elf/: Makefile.in  asm_syscalls.S  boot_args.c  boot_c.c  bsp.c  context.c  crt0.c  crti.c  crtn.c  diagnostic.c  dup2.c  exceptions.S  exceptions_pl0.S  execve.c  fcntl.c  fstat.c  gettimeofday.c  handlers.c  k1-memset.c  link.c  lseek.c  nanosleep.c  open.c  sbrk.c  sleep.c  start.S  syscall.c  times.c  usleep.c  wait.c  write.c
libgloss/k1-elf/linker_scripts/: bare.ld  memory_map.ld  tls.ld
libgloss/k1-mbr/: Makefile.in  asm_syscalls.S  chdir.c  configure  crti.c  fcntl.c  gettimeofday.c  isatty.c  link.c  nanosleep.c  open.c  read.c  rmdir.c  sbrk.c  stat.c  times.c  unlink.c
libgloss/kvx-cos/: Makefile.in  access.c  aclocal.m4  alarm.c  asm_syscalls.S  asm_syscalls_native.S  chmod.c  clock.c  clock_getres.c  clock_gettime.c  close.c  configure  configure.in  crt0.c  crti.c  crtn.c  exit.c  fcntl.c  fstat.c  getdents.c  getpagesize.c  getpid.c  gmon.c  ids.c  lseek.c  mcount.s  mkdir.c  mman.c  nanosleep.c  pause.c  rmdir.c  sbrk.c  stat.c  stubs.c  sys_sysconf.c  times.c  wait.c
libgloss/kvx-elf/: Makefile.in  access.c  asm_syscalls.S  boot_args.c  boot_c.c  bsp.c  context.c  crt0.c  diagnostic.c  exceptions.S  fcntl.c  fork.c  fstat.c  getpagesize.c  getpid.c  gettimeofday.c  handlers.c  mkdir.c  mkfifo.c  nanosleep.c  open.c  sleep.c  start.S  syscall.c  times.c  usleep.c
libgloss/kvx-elf/linker_scripts/: bare.ld  bare_extern.ld  memory_map.ld
libgloss/kvx-mbr/: access.c  asm_syscalls.S  chmod.c  close.c  configure.in  crt0.c  dup.c  exit.c  fcntl.c  getpagesize.c  gettimeofday.c  kill.c  nanosleep.c  open.c  times.c
newlib/: configure  configure.host
newlib/libc/: aclocal.m4
newlib/libc/include/: pthread.h  regex.h
newlib/libc/machine/: configure  configure.in
newlib/libc/machine/k1/: Makefile.am  Makefile.in  arc4random_uniform.c  configure  configure.ac  memcpy.c  memset.S  memset.c  setjmp.S
newlib/libc/machine/k1/include/: fenv.h
newlib/libc/machine/k1/sys/: fenv.h
newlib/libc/reent/: impure.c
newlib/libc/stdio/: local.h
newlib/libc/sys/: configure  (+1 more)
newlib/libc/sys/cos/: Makefile.am  Makefile.in  basedirname.c  fs.c  getrusage.c  lock.c  secure_getenv.c  setgethostname.c  timespec_get.c
newlib/libc/sys/cos/include/: dlfcn.h  netdb.h  syslog.h
newlib/libc/sys/cos/include/arpa/: inet.h
newlib/libc/sys/cos/include/machine/: types.h
newlib/libc/sys/cos/include/net/: if.h  if_var.h
newlib/libc/sys/cos/include/netinet/: icmp6.h  in.h  in_pcb.h  in_var.h  ip_mroute.h  ip_var.h  tcp_fsm.h  tcp_var.h
newlib/libc/sys/cos/include/netinet6/: ip6_var.h
newlib/libc/sys/cos/include/sys/: _bitcount.h  _bitset.h  _cpuset.h  _iovec.h  bitset.h  cpuset.h  dirent.h  mman.h  socket.h  uio.h  un.h
newlib/libc/sys/cos/sys/: fcntl.h  stdio.h
newlib/libm/: configure
newlib/libm/machine/kvx/: Makefile.am  Makefile.in  feclearexcept.c  fegetenv.c  feholdexcept.c  fesetenv.c  fesetround.c  ml_support_lib.h  s_fdim.c  sf_fdim.c  w_pow.c  wf_exp.c
(+145 files in other folders)
